# toolchainbuilder

./: .gitignore  BUILD.bazel  BUILD_GCC.bazel  Dockerfile  LICENSE  README.md  build.sh  cc_toolchain_config.bzl  cc_toolchain_gcc_native_config.bzl  deps.bzl  setup.sh  validate_repo.sh
