package(default_visibility = ["//visibility:public"])
load(":cc_toolchain_config.bzl", "cc_toolchain_config")

cc_toolchain_suite(
    name = "gcc_suite",
    toolchains = {
        "k8": ":k8_toolchain",
    },
)

filegroup(name = "empty")
cc_toolchain_config(name = "k8_toolchain_config")

filegroup(
    name = "all_files",
    srcs = glob(["toolchainroot/**"]),
)

filegroup(
    name = "compiler_files",
    srcs = [
        "toolchainroot/bin/x86_64-pc-linux-gnu-gcc",
        "toolchainroot/bin/x86_64-pc-linux-gnu-g++",
	"toolchainroot/libexec/gcc/x86_64-pc-linux-gnu/11.2.0/cc1plus",
    ],
)

filegroup(
    name = "linker_files",
    srcs = [
        "toolchainroot/bin/x86_64-pc-linux-gnu-gcc",
    ],
)

filegroup(
    name = "ar_files",
    srcs = [
        "toolchainroot/bin/x86_64-pc-linux-gnu-ar",
    ],
)


cc_toolchain(
    name = "k8_toolchain",
    toolchain_identifier = "k8-toolchain",
    toolchain_config = ":k8_toolchain_config",
    all_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":empty",
    linker_files = ":compiler_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)
